--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: clinTables
 Title: Clinical Trial Tables in R
 Version: 0.0.0.9000
-Authors@R: person('Sukalpo', 'Saha', email = 'sukalposaha@gmail.com', role = c('cre', 'aut'))
+Authors@R: 
+    person("Sukalpo", "Saha", , "sukalposaha@gmail.com", role = c("cre", "aut"))
 Description: Shiny App to Clinical Trial Tables.
 License: MIT + file LICENSE
+URL: https://github.com/ahasoplakus/clinTables
+BugReports: https://github.com/ahasoplakus/clinTables/issues
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.4.0),
     shiny (>= 1.7.4)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
-URL: https://github.com/ahasoplakus/clinTables
-BugReports: https://github.com/ahasoplakus/clinTables/issues
+RoxygenNote: 7.2.3
