--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Sukalpo", "Saha", , "sukalposaha@gmail.com", role = c("cre", "aut"))
 Description: Shiny App to Clinical Trial Tables.
-License: MIT + file LICENSE
+License: Apache License (>= 2)
 URL: https://github.com/ahasoplakus/clinTables
 BugReports: https://github.com/ahasoplakus/clinTables/issues
 Imports: 
