--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,14 @@ URL: https://github.com/ahasoplakus/clinTables
 BugReports: https://github.com/ahasoplakus/clinTables/issues
 Imports: 
     config (>= 0.3.1),
+    dplyr (>= 1.1.1),
     golem (>= 0.4.0),
-    shiny (>= 1.7.4)
+    purrr (>= 1.0.1),
+    shiny (>= 1.7.4),
+    tidyr (>= 1.3.0)
 Suggests: 
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -19,3 +24,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.2.3
+VignetteBuilder: knitr
