add adsl dsiplay module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,5 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shinyWidgets,pickerInput)
+importFrom(shinyWidgets,updatePickerInput)
