--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports:
     golem (>= 0.4.0),
     purrr (>= 1.0.1),
     shiny (>= 1.7.4),
+    shinyWidgets (>= 0.7.6),
     tidyr (>= 1.3.0)
 Suggests: 
     knitr,
