add demog utilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
 importFrom(rtables,basic_table)
 importFrom(rtables,build_table)
 importFrom(rtables,split_cols_by)
+importFrom(rtables,split_rows_by)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,column)
