--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,15 +8,20 @@ License: Apache License (>= 2)
 URL: https://github.com/ahasoplakus/clinTables
 BugReports: https://github.com/ahasoplakus/clinTables/issues
 Imports: 
+    bs4Dash (>= 2.2.1),
     config (>= 0.3.1),
     dplyr (>= 1.1.1),
     golem (>= 0.4.0),
     purrr (>= 1.0.1),
+    rtables (>= 0.6.0),
     shiny (>= 1.7.4),
     shinyWidgets (>= 0.7.6),
+    tern (>= 0.8.1.9003),
     tidyr (>= 1.3.0)
 Suggests: 
     knitr,
+    logger (>= 0.2.2),
+    random.cdisc.data (>= 0.3.13.9056),
     rmarkdown,
     spelling,
     testthat (>= 3.0.0)
