--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,11 @@ Imports:
     dplyr (>= 1.1.1),
     golem (>= 0.4.0),
     purrr (>= 1.0.1),
+    rlang (>= 1.1.0),
     rtables (>= 0.6.0),
     shiny (>= 1.7.4),
     shinyWidgets (>= 0.7.6),
+    stringr (>= 1.5.0),
     tern (>= 0.8.1.9003),
     tidyr (>= 1.3.0)
 Suggests: 
