--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -51,7 +51,7 @@ jobs:
             check_error_on <- "note"
           }
           rcmdcheck::rcmdcheck(
-            args = c("--no-manual", "--as-cran"),
+            args = c("--no-manual", "--as-cran", "--no-vignettes"),
             error_on = check_error_on,
             check_dir = "check"
           )
