--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [main, master]
+    branches: [devel, master]
   pull_request:
-    branches: [main, master]
+    branches: [devel, master]
 
 name: R-CMD-check-hard
 
