--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,9 @@ Imports:
     stringr (>= 1.5.0),
     tern (>= 0.8.1.9005),
     tidyr (>= 1.3.0)
+Remotes: 
+    insightsengineering/random.cdisc.data,
+    insightsengineering/tern
 Suggests: 
     knitr,
     logger (>= 0.2.2),
