--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,18 @@
 export(build_adsl)
 export(filter_adsl)
 export(run_app)
-import(bs4Dash)
 import(shiny)
+importFrom(bs4Dash,box)
+importFrom(bs4Dash,boxSidebar)
+importFrom(bs4Dash,dashboardBody)
+importFrom(bs4Dash,dashboardHeader)
+importFrom(bs4Dash,dashboardPage)
+importFrom(bs4Dash,dashboardSidebar)
+importFrom(bs4Dash,menuItem)
+importFrom(bs4Dash,menuItemOutput)
+importFrom(bs4Dash,renderMenu)
+importFrom(bs4Dash,sidebarMenu)
+importFrom(bs4Dash,tabBox)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
