add adae modules

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,10 +20,12 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
 importFrom(rtables,basic_table)
 importFrom(rtables,build_table)
+importFrom(rtables,drop_split_levels)
 importFrom(rtables,split_cols_by)
 importFrom(rtables,split_rows_by)
 importFrom(shiny,HTML)
@@ -35,4 +37,6 @@ importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(tern,summarize_num_patients)
+importFrom(tern,summarize_occurrences_by_grade)
 importFrom(tern,summarize_vars)
