--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   clinTables: clinTables.html
-last_built: 2023-05-05T11:02Z
+  tests_and_coverage: tests_and_coverage.html
+last_built: 2023-05-08T11:08Z
 
