add package import file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,22 @@ importFrom(bs4Dash,menuItemOutput)
 importFrom(bs4Dash,renderMenu)
 importFrom(bs4Dash,sidebarMenu)
 importFrom(bs4Dash,tabBox)
+importFrom(dplyr,case_match)
+importFrom(dplyr,ends_with)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(purrr,every)
+importFrom(purrr,list_assign)
+importFrom(purrr,map)
+importFrom(purrr,set_names)
+importFrom(rlang,parse_exprs)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
@@ -36,6 +47,8 @@ importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(stringr,str_to_title)
+importFrom(stringr,str_trunc)
 importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
 importFrom(tern,summarize_vars)
