--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,27 @@
+url: https://ahasoplakus.github.io/clinTables/
+
 template:
   bootstrap: 5
+  params:
+    bootswatch: flatly
   theme: breeze-light
   bslib:
     base_font: {google: "Roboto"}
     heading_font: {google: "Roboto Slab"}
     code_font: {google: "JetBrains Mono"}
+repo:
+  url:
+    home: https://github.com/ahasoplakus/clinTables/
+    source: https://github.com/ahasoplakus/clinTables/blob/main/
+    issue: https://github.com/ahasoplakus/clinTables/issues/
+    user: https://github.com/
+
+reference:
+- title: Run App
+  desc: Run the application locally
+  contents:
+  - has_keyword("app_specific")
+
+- title: Helper Functions
+  contents:
+  - has_keyword("helpers")
