--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,8 @@ pkgdown_sha: ~
 articles:
   clinTables: clinTables.html
   tests_and_coverage: tests_and_coverage.html
-last_built: 2023-05-08T14:48Z
+last_built: 2023-05-09T06:17Z
+urls:
+  reference: https://ahasoplakus.github.io/clinTables/reference
+  article: https://ahasoplakus.github.io/clinTables/articles
 
