--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,7 @@ importFrom(purrr,every)
 importFrom(purrr,list_assign)
 importFrom(purrr,map)
 importFrom(purrr,set_names)
-importFrom(rlang,parse_exprs)
+importFrom(rlang,parse_expr)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
