--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
+importFrom(formatters,var_labels)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
