--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,12 +3,15 @@ url: https://ahasoplakus.github.io/clinTables/
 template:
   bootstrap: 5
   params:
-    bootswatch: flatly
-  theme: breeze-light
+    bootswatch: journal
+  theme: github-light
   bslib:
+    bg: "#fff"
+    fg: "#51557E"
+    primary: "#A3C7D6"
     base_font: {google: "Roboto"}
     heading_font: {google: "Roboto Slab"}
-    code_font: {google: "JetBrains Mono"}
+    code_font: {google: "Poltawski Nowy"}
 repo:
   url:
     home: https://github.com/ahasoplakus/clinTables/
@@ -25,3 +28,17 @@ reference:
 - title: Helper Functions
   contents:
   - has_keyword("helpers")
+
+navbar:
+  bg: primary
+  structure:
+    right: [github, linkedin, twitter]
+  components:
+    linkedin:
+      icon: fa-linkedin
+      href: https://www.linkedin.com/in/sukalpo-saha-186329b1/
+      aria-label: Linkedin
+    twitter:
+      icon: fa-twitter
+      href: https://twitter.com/saha_sukalpo
+      aria-label: Twitter
