--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(purrr,modify_if)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(rlang,parse_expr)
+importFrom(rlang,sym)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
