--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(adae_by_sev_tox)
 export(build_adsl)
 export(run_app)
 import(shiny)
+importFrom(DT,dataTableOutput)
+importFrom(DT,datatable)
+importFrom(DT,renderDataTable)
 importFrom(bs4Dash,box)
 importFrom(bs4Dash,boxSidebar)
 importFrom(bs4Dash,dashboardBody)
@@ -31,6 +34,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_head)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
 importFrom(formatters,var_labels)
@@ -65,7 +69,9 @@ importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shinyWidgets,pickerInput)
+importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(stringr,str_remove_all)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
 importFrom(tern,count_occurrences)
