--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,12 @@ Imports:
     bs4Dash (>= 2.2.1),
     config (>= 0.3.1),
     dplyr (>= 1.1.1),
-    DT,
     formatters (>= 0.4.0),
     golem (>= 0.4.0),
     logger (>= 0.2.2),
     purrr (>= 1.0.1),
     random.cdisc.data (>= 0.3.13.9058),
+    reactable (>= 0.4.4),
     rlang (>= 1.1.0),
     rtables (>= 0.6.0),
     shiny (>= 1.7.4),
