revert dataset filters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(purrr,discard)
 importFrom(purrr,every)
 importFrom(purrr,list_assign)
 importFrom(purrr,map)
