--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,9 +20,11 @@ Imports:
     rlang (>= 1.1.0),
     rtables (>= 0.6.0),
     shiny (>= 1.7.4),
+    shinyjs (>= 2.1.0),
     shinyWidgets (>= 0.7.6),
     stringr (>= 1.5.0),
     tern (>= 0.8.1.9005),
+    tibble (>= 3.2.1),
     tidyr (>= 1.3.0)
 Remotes: 
     insightsengineering/random.cdisc.data,
