--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     tern (>= 0.8.1.9005),
     tibble (>= 3.2.1),
     tidyr (>= 1.3.0)
-Remotes: 
+Remotes:
+    insightsengineering/formatters,
     insightsengineering/random.cdisc.data,
     insightsengineering/rtables,
     insightsengineering/tern
