--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     random.cdisc.data (>= 0.3.13.9058),
     reactable (>= 0.4.4),
     rlang (>= 1.1.0),
+    rsconnect (>= 0.8.29),
     rtables (>= 0.6.0),
     shiny (>= 1.7.4),
     shinyjs (>= 2.1.0),
