--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,9 @@ jobs:
       matrix:
         config:
           - {os: ubuntu-latest, r: 'oldrel-1'}
+          - {os: ubuntu-20.04, r: '4.1', repos: 'https://packagemanager.posit.co/cran/2021-05-03/'}
+          - {os: ubuntu-20.04, r: '4.2', repos: 'https://packagemanager.posit.co/cran/2022-01-03/'}
+          - {os: ubuntu-20.04, r: 'release', repos: 'https://packagemanager.rstudio.com/cran/__linux__/focal/latest'}
 
     env:
       # Access token for GitHub
