--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,23 +24,24 @@ Imports:
     shinyjs (>= 2.1.0),
     shinyWidgets (>= 0.7.6),
     stringr (>= 1.5.0),
-    tern (>= 0.8.1.9005),
+    tern (>= 0.8.1.9003),
     tibble (>= 3.2.1),
     tidyr (>= 1.3.0)
-Remotes:
-    insightsengineering/formatters,
-    insightsengineering/random.cdisc.data,
-    insightsengineering/rtables,
-    insightsengineering/tern
 Suggests: 
     covr,
     knitr,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
+Remotes:
+    insightsengineering/formatters,
+    insightsengineering/random.cdisc.data,
+    insightsengineering/rtables,
+    insightsengineering/tern
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.2.3
-VignetteBuilder: knitr
