--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,7 +45,7 @@ jobs:
           Rscript -e "install.packages('devtools')"
           Rscript -e "devtools::install_github('insightsengineering/random.cdisc.data')"
           Rscript -e "devtools::install_github('insightsengineering/tern@e222a2b829ffd647bc7632dc4c57ef14ae01f525')"
-          Rscript -e "install.packages(c('BH', 'anytime', 'attempt', 'bs4dash', 'config', 'covr', 'fresh', 'golem', 'here', 'hunspell'))"
+          Rscript -e "install.packages(c('BH', 'anytime', 'attempt', 'bs4dash', 'config', 'covr', 'fresh', 'golem', 'here', 'hunspell'), repos = 'https://packagemanager.posit.co/cran/__linux__/centos7/latest')"
           Rscript -e "rsconnect::setAccountInfo(Sys.getenv('SHINYAPPS_ACCOUNT'), Sys.getenv('SHINYAPPS_TOKEN'), Sys.getenv('SHINYAPPS_SECRET'))"
           Rscript -e "rsconnect::deployApp(appName = 'clinTables')"
 
