--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,7 +27,7 @@ jobs:
           needs: coverage
 
       - name: Test coverage
-        run: covr::codecov(quiet = FALSE)
+        run: covr::codecov(quiet = FALSE, line_exclusions = list("R/run_app.R" = 1:32))
         shell: Rscript {0}
 
       - name: Upload coverage reports to Codecov
