--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(shiny,tagList)
 importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(shinycssloaders,withSpinner)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
