--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,3 +74,4 @@ importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
 importFrom(tern,summarize_vars)
 importFrom(tidyr,replace_na)
+importFrom(waiter,spin_ball)
