--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,8 @@
 on:
   push:
     branches: [devel, master]
+  pull_request:
+    branches: [devel, master]
 
 name: deploy-app
 
@@ -32,6 +34,10 @@ jobs:
           r-version: ${{ matrix.config.r }}
           use-public-rspm: true
 
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rsconnect
+
       - name: Push to shinyapps.io
         if: github.ref == 'refs/heads/devel' || github.ref == 'refs/heads/master'
         env:
@@ -42,7 +48,6 @@ jobs:
           Rscript -e "install.packages('devtools')"
           Rscript -e "devtools::install_github('insightsengineering/random.cdisc.data')"
           Rscript -e "devtools::install_github('insightsengineering/tern@e222a2b829ffd647bc7632dc4c57ef14ae01f525')"
-          Rscript -e "install.packages(c('rsconnect','BH', 'MASS', 'anytime', 'attempt', 'bs4Dash', 'config', 'covr', 'fresh', 'golem', 'here', 'hunspell', 'logger', 'reactR', 'reactable', 'shinyWidgets', 'shinyjs', 'spelling', 'waiter', 'shinycssloaders'), repos = 'https://packagemanager.posit.co/cran/__linux__/centos7/latest')"
           Rscript -e "rsconnect::setAccountInfo(Sys.getenv('SHINYAPPS_ACCOUNT'), Sys.getenv('SHINYAPPS_TOKEN'), Sys.getenv('SHINYAPPS_SECRET'))"
           Rscript -e "rsconnect::deployApp(appName = 'clinTables')"
 
