--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [devel, master]
-  pull_request:
-    branches: [devel, master]
+    branches: [devel]
 
 name: deploy-app
 
