--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -11,6 +11,8 @@ name: R-CMD-check
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
+    if: >
+      !contains(github.event.commits[0].message, '[skip cmd]')
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
