--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    outputs:
+      coverage-percent: ${{ steps.set-coverage-percentage.outputs.coverage-percentage }}
 
     steps:
       - uses: actions/checkout@v3
@@ -32,7 +34,8 @@ jobs:
                 x <- covr::package_coverage(
                   path=".",
                   clean = FALSE,
-                  quiet = FALSE
+                  quiet = FALSE,
+                  line_exclusions = list("R/run_app.R" = 1:32)
                 )
                 print(x)
                 covr::to_cobertura(x, filename = "coverage.xml")
@@ -59,6 +62,47 @@ jobs:
             }
           )
         shell: Rscript {0}
+
+      - name: Check whether coverage reports exists
+        id: check_coverage_reports
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "coverage.xml, coverage.txt, coverage-report.html"
+
+      - name: Set coverage percentage as output
+        id: set-coverage-percentage
+        run: echo "coverage-percentage=$(cat coverage.txt)" >> $GITHUB_OUTPUT
+        if: steps.check_coverage_reports.outputs.files_exists == 'true'
+
+      - name: Generate Coverage Summary Report
+        if: steps.check_coverage_reports.outputs.files_exists == 'true' && github.event_name == 'pull_request'
+        uses: irongut/CodeCoverageSummary@v1.2.0
+        with:
+          filename: coverage.xml
+          badge: true
+          fail_below_min: false
+          format: markdown
+          hide_branch_rate: true
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
+
+      - name: Upload report for review
+        if: steps.check_coverage_reports.outputs.files_exists == 'true' && github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: "coverage-report.html"
+        continue-on-error: true
+
+      - name: Add Coverage PR Comment
+        if: steps.check_coverage_reports.outputs.files_exists == 'true' && github.event_name == 'pull_request'
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: code-coverage
+          path: code-coverage-results.md
+        continue-on-error: true
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
