--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(purrr,discard)
 importFrom(purrr,every)
+importFrom(purrr,keep)
 importFrom(purrr,list_assign)
 importFrom(purrr,map)
 importFrom(purrr,modify_if)
@@ -56,6 +57,7 @@ importFrom(rtables,basic_table)
 importFrom(rtables,build_table)
 importFrom(rtables,cbind_rtables)
 importFrom(rtables,drop_split_levels)
+importFrom(rtables,obj_label)
 importFrom(rtables,remove_split_levels)
 importFrom(rtables,split_cols_by)
 importFrom(rtables,split_rows_by)
@@ -69,7 +71,9 @@ importFrom(shinycssloaders,withSpinner)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
+importFrom(tern,append_varlabels)
 importFrom(tern,count_occurrences)
+importFrom(tern,df_explicit_na)
 importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
 importFrom(tern,summarize_vars)
