ui updates and ae_summary changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(dplyr,slice_head)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
 importFrom(formatters,var_labels)
+importFrom(formatters,var_relabel)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
@@ -49,6 +50,7 @@ importFrom(purrr,modify_if)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(rlang,parse_expr)
+importFrom(rlang,parse_exprs)
 importFrom(rlang,sym)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
@@ -68,11 +70,13 @@ importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
 importFrom(shinycssloaders,withSpinner)
+importFrom(stringr,str_glue)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
 importFrom(tern,append_varlabels)
 importFrom(tern,count_occurrences)
+importFrom(tern,count_patients_with_flags)
 importFrom(tern,df_explicit_na)
 importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
