--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,12 @@ Imports:
 Suggests: 
     covr,
     knitr,
+    cli,
+    lifecycle,
+    glue,
     rmarkdown,
     spelling,
+    withr,
     testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
@@ -46,3 +50,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.2.3
+Roxygen: list(markdown = TRUE)
