--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(adae_by_sev_tox)
 export(build_adsl)
 export(run_app)
+import(rlang)
 import(shiny)
 importFrom(bs4Dash,box)
 importFrom(bs4Dash,boxSidebar)
@@ -49,9 +50,6 @@ importFrom(purrr,map)
 importFrom(purrr,modify_if)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
-importFrom(rlang,parse_expr)
-importFrom(rlang,parse_exprs)
-importFrom(rlang,sym)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
@@ -76,7 +74,9 @@ importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
 importFrom(tern,append_varlabels)
 importFrom(tern,count_occurrences)
+importFrom(tern,count_patients_with_event)
 importFrom(tern,count_patients_with_flags)
+importFrom(tern,count_values)
 importFrom(tern,df_explicit_na)
 importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
