--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ URL: https://github.com/ahasoplakus/clinTables
 BugReports: https://github.com/ahasoplakus/clinTables/issues
 Imports: 
     bs4Dash (>= 2.2.1),
-    config (>= 0.3.1),
     dplyr (>= 1.1.1),
     formatters (>= 0.4.1),
     golem (>= 0.4.0),
@@ -30,6 +29,7 @@ Imports:
     waiter
 Suggests: 
     covr,
+    config,
     knitr,
     cli,
     lifecycle,
