--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,8 @@ name: deploy-app
 jobs:
   deploy-app:
     runs-on: ${{ matrix.config.os }}
+    if: >
+      !contains(github.event.commits[0].message, '[skip deploy]')
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
