add setup filters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(purrr,keep)
 importFrom(purrr,list_assign)
 importFrom(purrr,map)
 importFrom(purrr,modify_if)
+importFrom(purrr,none)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
 importFrom(rtables,add_colcounts)
