--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ importFrom(shinyWidgets,pickerInput)
 importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
 importFrom(shinycssloaders,withSpinner)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_to_title)
