fix reactivity adxx_bodsys

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(purrr,every)
 importFrom(purrr,keep)
 importFrom(purrr,list_assign)
 importFrom(purrr,map)
+importFrom(purrr,map_lgl)
 importFrom(purrr,modify_if)
 importFrom(purrr,none)
 importFrom(purrr,reduce)
