add filters for cm mh

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,10 @@ importFrom(purrr,modify_if)
 importFrom(purrr,none)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
+importFrom(reactable,colDef)
+importFrom(reactable,reactable)
+importFrom(reactable,reactableOutput)
+importFrom(reactable,renderReactable)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
 importFrom(rtables,as_html)
@@ -67,9 +71,17 @@ importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shinyWidgets,pickerInput)
+importFrom(shinyWidgets,prettySwitch)
 importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
 importFrom(shinycssloaders,withSpinner)
+importFrom(shinyjs,disable)
+importFrom(shinyjs,enable)
+importFrom(shinyjs,hide)
+importFrom(shinyjs,reset)
+importFrom(shinyjs,runjs)
+importFrom(shinyjs,show)
+importFrom(shinyjs,useShinyjs)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_remove_all)
@@ -84,5 +96,6 @@ importFrom(tern,df_explicit_na)
 importFrom(tern,summarize_num_patients)
 importFrom(tern,summarize_occurrences_by_grade)
 importFrom(tern,summarize_vars)
+importFrom(tibble,tibble)
 importFrom(tidyr,replace_na)
 importFrom(waiter,spin_ball)
