--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,9 +71,12 @@ importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shinyWidgets,pickerInput)
+importFrom(shinyWidgets,prettyCheckboxGroup)
+importFrom(shinyWidgets,prettyRadioButtons)
 importFrom(shinyWidgets,prettySwitch)
 importFrom(shinyWidgets,show_toast)
 importFrom(shinyWidgets,updatePickerInput)
+importFrom(shinyWidgets,updatePrettyCheckboxGroup)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
