disable tabs based on data load

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(purrr,modify_if)
 importFrom(purrr,none)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
+importFrom(purrr,walk)
 importFrom(reactable,colDef)
 importFrom(reactable,reactable)
 importFrom(reactable,reactableOutput)
@@ -84,6 +85,7 @@ importFrom(shinyjs,hide)
 importFrom(shinyjs,reset)
 importFrom(shinyjs,runjs)
 importFrom(shinyjs,show)
+importFrom(shinyjs,toggleState)
 importFrom(shinyjs,useShinyjs)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
