add filters to adae summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(bs4Dash,menuItemOutput)
 importFrom(bs4Dash,renderMenu)
 importFrom(bs4Dash,sidebarMenu)
 importFrom(bs4Dash,tabBox)
+importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -90,6 +91,7 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_sub)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trunc)
 importFrom(tern,append_varlabels)
