--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Imports:
     shinyjs (>= 2.1.0),
     shinyWidgets (>= 0.7.6),
     stringr (>= 1.5.0),
-    tern (>= 0.8.2.9001),
+    tern (>= 0.8.3),
     tibble (>= 3.2.1),
     tidyr (>= 1.3.0),
     waiter
@@ -42,9 +42,7 @@ VignetteBuilder:
     knitr
 Remotes:
     insightsengineering/formatters,
-    insightsengineering/random.cdisc.data,
-    insightsengineering/rtables,
-    insightsengineering/tern
+    insightsengineering/random.cdisc.data
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
