--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,11 @@ export(filters_to_cond)
 export(run_app)
 import(rlang)
 import(shiny)
+importFrom(bs4Dash,accordion)
+importFrom(bs4Dash,accordionItem)
 importFrom(bs4Dash,box)
 importFrom(bs4Dash,boxSidebar)
+importFrom(bs4Dash,bs4Card)
 importFrom(bs4Dash,dashboardBody)
 importFrom(bs4Dash,dashboardHeader)
 importFrom(bs4Dash,dashboardPage)
@@ -16,6 +19,7 @@ importFrom(bs4Dash,menuItem)
 importFrom(bs4Dash,menuItemOutput)
 importFrom(bs4Dash,renderMenu)
 importFrom(bs4Dash,sidebarMenu)
+importFrom(bs4Dash,sortable)
 importFrom(bs4Dash,tabBox)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
