--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,15 @@ importFrom(bs4Dash,dashboardPage)
 importFrom(bs4Dash,dashboardSidebar)
 importFrom(bs4Dash,menuItem)
 importFrom(bs4Dash,menuItemOutput)
+importFrom(bs4Dash,navbarMenu)
+importFrom(bs4Dash,navbarTab)
 importFrom(bs4Dash,renderMenu)
 importFrom(bs4Dash,sidebarMenu)
 importFrom(bs4Dash,sortable)
 importFrom(bs4Dash,tabBox)
+importFrom(bs4Dash,tabItem)
+importFrom(bs4Dash,tabItems)
+importFrom(bs4Dash,updateNavbarTabs)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
