--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,16 +6,15 @@ Authors@R:
 Description: Shiny Application for visualizing some of the standard tables
     used in Clinical Trials.
 License: Apache License (>= 2)
-URL: https://github.com/ahasoplakus/clinTables
-BugReports: https://github.com/ahasoplakus/clinTables/issues
+URL: https://github.com/ahasoplakus/clinTables/
+BugReports: https://github.com/ahasoplakus/clinTables/issues/
 Imports: 
-    bs4Dash (>= 2.2.1),
-    dplyr (>= 1.1.1),
+    bs4Dash (>= 2.3.0),
+    dplyr (>= 1.1.2),
     formatters (>= 0.5.0),
     golem (>= 0.4.0),
     logger (>= 0.2.2),
     purrr (>= 1.0.1),
-    random.cdisc.data (>= 0.3.13.9060),
     reactable (>= 0.4.4),
     rlang (>= 1.1.0),
     rtables (>= 0.6.1),
@@ -35,14 +34,13 @@ Suggests:
     glue,
     knitr,
     lifecycle,
+    random.cdisc.data,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
     withr
 VignetteBuilder: 
     knitr
-Remotes:
-    insightsengineering/random.cdisc.data
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
