--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,8 @@ Suggests:
     withr
 VignetteBuilder: 
     knitr
+Remotes:
+    insightsengineering/random.cdisc.data
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
