--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(reactable,reactableOutput)
 importFrom(reactable,renderReactable)
 importFrom(rtables,add_colcounts)
 importFrom(rtables,add_overall_col)
+importFrom(rtables,append_topleft)
 importFrom(rtables,as_html)
 importFrom(rtables,basic_table)
 importFrom(rtables,build_table)
