--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(add_adae_flags)
 export(build_adae_by_sev_tox)
 export(build_adae_summary)
-export(build_adsl)
+export(build_demog_characteristics_table)
+export(build_generic_occurrence_table)
 export(filters_to_cond)
 export(run_app)
 import(rlang)
