--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -41,7 +41,7 @@ jobs:
                   "R/app_server.R" = 12:22,
                   "R/run_app.R",
                   "R/mod_data_read.R" = c(160:168, 170:178, 185:194, 196:214),
-                  "R/mod_global_filters.R" = 84:85,
+                  "R/mod_global_filters.R" = c(75, 88:89),
                   "R/mod_data_preview.R" = 63:66
                   )
                 )
