--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: clinTables
 Title: Clinical Trial Tables in R
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person("Sukalpo", "Saha", , "sukalposaha@gmail.com", role = c("cre", "aut"))
 Description: Shiny Application for visualizing some of the standard tables
@@ -31,6 +31,7 @@ Suggests:
     cli,
     config,
     covr,
+    flextable,
     glue,
     knitr,
     lifecycle,
