--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice_head)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
+importFrom(flextable,autofit)
+importFrom(flextable,htmltools_value)
 importFrom(formatters,var_labels)
 importFrom(formatters,var_relabel)
 importFrom(golem,activate_js)
@@ -88,6 +90,7 @@ importFrom(rtables,remove_split_levels)
 importFrom(rtables,split_cols_by)
 importFrom(rtables,split_cols_by_multivar)
 importFrom(rtables,split_rows_by)
+importFrom(rtables,tt_to_flextable)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
