--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ BugReports: https://github.com/ahasoplakus/clinTables/issues/
 Imports: 
     bs4Dash (>= 2.3.0),
     dplyr (>= 1.1.2),
+    flextable (>= 0.8.3),
     formatters (>= 0.5.0),
     golem (>= 0.4.0),
     purrr (>= 1.0.1),
@@ -29,7 +30,6 @@ Suggests:
     cli,
     config,
     covr,
-    flextable,
     glue,
     knitr,
     lifecycle,
@@ -50,3 +50,4 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+SystemRequirements: pandoc (>= 2.0.6) - http://pandoc.org
