--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ importFrom(bs4Dash,accordionItem)
 importFrom(bs4Dash,box)
 importFrom(bs4Dash,boxSidebar)
 importFrom(bs4Dash,bs4Card)
+importFrom(bs4Dash,carousel)
+importFrom(bs4Dash,carouselItem)
 importFrom(bs4Dash,dashboardBody)
 importFrom(bs4Dash,dashboardHeader)
 importFrom(bs4Dash,dashboardPage)
@@ -24,7 +26,6 @@ importFrom(bs4Dash,menuItemOutput)
 importFrom(bs4Dash,navbarTab)
 importFrom(bs4Dash,renderMenu)
 importFrom(bs4Dash,sidebarMenu)
-importFrom(bs4Dash,sortable)
 importFrom(bs4Dash,tabBox)
 importFrom(bs4Dash,tabItem)
 importFrom(bs4Dash,tabItems)
