--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -40,7 +40,8 @@ jobs:
                   line_exclusions = list(
                   "R/app_server.R" = 12:22,
                   "R/run_app.R",
-                  "R/mod_data_read.R" = c(160:168, 170:178, 185:189, 191:200),
+                  "R/ui_utils.R",
+                  "R/mod_data_read.R" = c(155:163, 165:173, 180:184, 190:195),
                   "R/mod_global_filters.R" = c(96:97),
                   "R/mod_data_preview.R" = 63:66
                   )
