--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Suggests:
     logger,
     random.cdisc.data,
     rmarkdown,
+    shinycssloaders,
     spelling,
     testthat (>= 3.0.0),
     tibble,
